2007-12-11  Johannes Schmid <jhs@gnome.org>

	* people.xml.in: Added Massimo Furlani
	* tranlation-teams-xml.in: Added Friulian translation team

2007-12-06  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: New module 'conduit' in Extra release set.

2007-12-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Deleted scaffold, as it has been moved to the
	archives.

2007-12-04  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/people.tmpl:
	Make it xhtml compliant and fixed an issue that prevents to show the
	/data/nobody.png (the if condition was wrong)

2007-12-04  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gnome-terminal branched for gnome-2-20

2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gucharmap branched for gnome-2-20

2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in: Added totem-pl-parser and Bastien as a maintainer
	of it and for totem too
	* releases.xml.in: Added totem-pl-parser to GNOME 2.22 release set and
	removed cheese from gnome-extras since it is in Proposed set

2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/person.tmpl: Added missing </div>
	* templates/person-base.tmpl: Added missing <ul></ul>

2007-11-29  Gil Forcada  <gforcada@svn.gnome.org>

	* releases.xml.in: Added cheese to proposed category

2007-11-29  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in: Added cheese module.
	* releases.xml.in: Added cheese to gnome-extras release-set.

2007-11-28  Claude Paroz  <claude@2xlibre.net>

	* data/gnome-gtp.png: Improved foot logo.

2007-11-27  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Tracking HEAD again for brasero.

2007-11-26  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: GTK+ branched (2-12).

2007-11-25  Claude Paroz  <claude@2xlibre.net>
