@@ -925,10 +925,11 @@
     <branch id="HEAD"/>
   </module>
   <module id="gnome-screensaver">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="gnome-session">
     <maintainer id="vuntz"/>
@@ -1345,10 +1346,11 @@
     <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="nautilus-cd-burner">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="nautilus-actions">
     <branch id="HEAD"/>
