@@ -493,7 +493,7 @@
       <module id="gnome-nettool"/>
       <module id="gnome-panel" branch="gnome-2-20"/>
       <module id="gnome-power-manager" branch="gnome-2-20"/>
-      <module id="gnome-screensaver"/>
+      <module id="gnome-screensaver" branch="gnome-2-20"/>
       <module id="gnome-session" branch="gnome-2-20"/>
       <module id="gnome-system-monitor" branch="gnome-2-20"/>
       <module id="gnome-system-tools" branch="gnome-2-20"/>
@@ -515,7 +515,7 @@
       <module id="libwnck" branch="gnome-2-20"/>
       <module id="metacity" branch="gnome-2-20"/>
       <module id="nautilus" branch="gnome-2-20"/>
-      <module id="nautilus-cd-burner"/>
+      <module id="nautilus-cd-burner" branch="gnome-2-20"/>
       <module id="orca" branch="gnome-2-20"/>
       <module id="seahorse" branch="gnome-2-20"/>
       <module id="sound-juicer" branch="gnome-2-20"/>
