@@ -1,3 +1,9 @@
+2007-12-12  Gil Forcada  <gforcada@svn.gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	gnome-screensaver and nautilus-cd-burner branched for gnome-2-20
+
 2007-12-11  Johannes Schmid <jhs@gnome.org>
 
 	* people.xml.in: Added Massimo Furlani
